# customer-service/src/main/java/com/example/demo/common/api/response/ApiError.java
@@ -1,3 +1,0 @@
-package com.example.demo.common.api.response;
-
-public record ApiError(String errorCode, String message) {}
