# customer-service/src/main/java/com/example/demo/common/api/response/ErrorDetail.java
@@ -1,0 +1,3 @@
+package com.example.demo.common.api.response;
+
+public record ErrorDetail(String errorCode, String message) {}
